--- a/src/app/pages/header/header.html
+++ b/src/app/pages/header/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid d-flex align-items-center justify-content-between">
     <!-- Logo and Brand -->
     <a class="navbar-brand d-flex align-items-center gap-2 fw-bold text-dark" href="#">
-    <img src="../../assets/images/scanner.png" alt="Logo" height="30" />
+    <img src="./images/scanner.png" alt="Logo" height="30" />
       Smart Document Scanner
     </a>
 
@@ -14,8 +14,8 @@
     </div>
 
     <!-- Right Side Button -->
-    <button class="btn btn-dark rounded-pill d-flex align-items-center gap-2 px-3">
-      <i class="bi bi-person"></i> Edit Profile
+    <button class="btn btn-dark rounded-pill d-flex align-items-center gap-2 px-3" (click)="goToSettings()">
+      <i class="bi bi-person" ></i> Edit Profile
     </button>
   </div>
 </nav>
