feat - added ui for apikey

--- a/src/app/pages/settings/settings.html
+++ b/src/app/pages/settings/settings.html
@@ -13,9 +13,9 @@
          <i class="bi bi-bell"></i> Notification
         </a>
       </li>
-      <li class="nav-item">
-          <a routerLink="api" routerLinkActive="router-link-active" class="nav-link">
-        <i class="bi bi-lock"></i> API
+      <li class="nav-item" >
+          <a routerLink="api" routerLinkActive="router-link-active" class="nav-link" >
+        <i class="bi bi-lock" (click)="api()"></i> API
         </a>
       </li>
       <li class="nav-item">
