--- a/src/app/pages/settings/settings.html
+++ b/src/app/pages/settings/settings.html
@@ -9,8 +9,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="notification" routerLinkActive="router-link-active" class="nav-link">
-         <i class="bi bi-bell"></i> Notification
+        <a routerLink="Mobile" routerLinkActive="router-link-active" class="nav-link">
+         <i class="bi bi-phone"></i> Mobile Pairing
         </a>
       </li>
       <li class="nav-item" >
