fix : setiing navigation fix

--- a/src/app/pages/settings/settings.html
+++ b/src/app/pages/settings/settings.html
@@ -1,25 +1,25 @@
 <div class="d-flex min-vh-100">
   <!-- Sidebar -->
   <div class="settings-sidebar bg-light border-end p-3" style="width: 250px;">
-    <h5 class="text-capitalize fw-bold mb-4">settings</h5>
+    <h5 class="text-capitalize fw-bold mb-4">Settings</h5>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a routerLink="edit-profile" routerLinkActive="router-link-active" class="nav-link">
-          <i class="bi bi-pencil"></i> Edit profile
+        <a routerLink="edit-profile" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-pencil"></i> Edit Profile
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="Mobile" routerLinkActive="router-link-active" class="nav-link">
-         <i class="bi bi-phone"></i> Mobile Pairing
-        </a>
-      </li>
-      <li class="nav-item" >
-          <a routerLink="api" routerLinkActive="router-link-active" class="nav-link" >
-        <i class="bi bi-lock" (click)="api()"></i> API
+        <a routerLink="mobile" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-phone"></i> Mobile Pairing
         </a>
       </li>
       <li class="nav-item">
-         <a routerLink="help" routerLinkActive="router-link-active" class="nav-link">
+        <a routerLink="api" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-lock"></i> API
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="help" routerLinkActive="active" class="nav-link">
           <i class="bi bi-question-circle"></i> Help
         </a>
       </li>
