--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -27,11 +27,20 @@
     </form>
   </div>
 
-  <!-- Right Side: Illustration -->
-  <div class="right-banner d-none d-md-flex col-md-6 bg-primary text-white flex-column justify-content-center align-items-center position-relative p-5">
-    <div class="text-center">
-      <h3 class="fw-bold">Say Good Bye to<br />Manual Data Entry</h3>
-      <img src="./images/invoice-illustration.png" alt="illustration" class="img-fluid mt-4" style="max-height: 300px;" />
-    </div>
+<!-- Right Side: Illustration -->
+<div class="right-banner d-none d-md-flex col-md-6 flex-column justify-content-center align-items-center position-relative p-5">
+  
+  <!-- Floating Icon -->
+  <div class="floating-icon position-absolute">
+    <span class="icon-inner">⚡</span>
+  </div>
+
+  <!-- Frosted Card -->
+  <div class="glass-card text-center p-4 rounded-4 shadow position-relative overflow-visible">
+    <h3 class="headline-text mb-3">Say Good Bye to<br />Manual Data Entry</h3>
+    <img src="./images/invoice-illustration.png"
+         alt="illustration"
+         class="img-fluid mt-4 illustration-pop"
+         style="max-height: 240px;" />
   </div>
 </div>
