--- a/src/app/pages/header/header.html
+++ b/src/app/pages/header/header.html
@@ -2,16 +2,17 @@
   <div class="container-fluid d-flex align-items-center justify-content-between">
     <!-- Logo and Brand -->
     <a class="navbar-brand d-flex align-items-center gap-2 fw-bold text-dark" href="#">
-    <img src="./images/scanner.png" alt="Logo" height="30" />
+  
+    <img src="../../../../public/images/scanner.ico" class="img-fluid"  alt="Logo" height="30" />
       Smart Document Scanner
     </a>
 
-    <!-- Center Navigation Links -->
+    <!-- Center Navigation Links 
     <div class="d-none d-lg-flex align-items-center gap-4">
       <a class="nav-link fw-semibold text-dark" href="#">Home</a>
       <a class="nav-link fw-semibold text-dark" href="#">Contact</a>
       <i class="bi bi-search fs-5 cursor-pointer"></i>
-    </div>
+    </div>-->
 
     <!-- Right Side Button -->
     <button class="btn btn-dark rounded-pill d-flex align-items-center gap-2 px-3" (click)="goToSettings()">
