--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,6 +1,6 @@
 <!-- Hero Section -->
 <!-- Hero Section with Side Image -->
-<div class="hero-section bg-light border-bottom py-5">
+<div class="hero-section  border-bottom py-5">
   <div class="container">
     <div class="row align-items-center">
       <!-- Text Content -->
@@ -19,8 +19,11 @@
 
       <!-- Side Image -->
       <div class="col-md-6 text-center mt-4 mt-md-0">
-        <img src="images/invoice-illustration.png" alt="Illustration" class="img-fluid" style="max-height: 300px;" />
-      </div>
+         <img src="./images/hero.jpg"
+         alt="illustration"
+         class="img-fluid mt-4 illustration-pop"
+         style="max-height:540px;" />
+       </div>
     </div>
   </div>
 </div>
@@ -48,10 +51,11 @@
 <div class="container mt-5">
   <h3 class="fw-bold mb-4 text-center text-md-start">Popular Templates</h3>
   <div class="row">
-    <app-template-card
-      *ngFor="let template of templates"
-      [template]="template"
-      class="col-12 col-sm-6 col-md-4 mb-4"
-    ></app-template-card>
+  <app-template-card
+  *ngFor="let template of templates"
+  [template]="template"
+  (useTemplate)="navigateToDocument($event)"
+  class="col-12 col-sm-6 col-md-4 mb-4"
+></app-template-card>
   </div>
 </div>
