--- a/src/app/pages/settings/edit-profile/edit-profile.html
+++ b/src/app/pages/settings/edit-profile/edit-profile.html
@@ -58,6 +58,6 @@
   </div>
 
   <div class="col-md-4 text-center">
-    <img src="assets/profile.png" class="rounded-circle mb-3" width="120" />
+    <img src="../../../../../public/images/profiles.png" class="rounded-circle mb-3" width="120" />
   </div>
 </div>
