--- a/src/app/pages/template-card/template-card.html
+++ b/src/app/pages/template-card/template-card.html
@@ -26,7 +26,9 @@
     
     <!-- Footer with button -->
     <div class="mt-auto d-flex justify-content-between align-items-center">
-      <button class="btn btn-outline-dark rounded-pill px-3">Use This</button>
+    <button class="btn btn-outline-dark rounded-pill px-3" (click)="onUseTemplate()">
+  Use This
+</button>
       <span class="badge bg-success rounded-pill">Free</span>
     </div>
   </div>
