--- a/src/app/pages/header/header.html
+++ b/src/app/pages/header/header.html
@@ -3,7 +3,7 @@
     <!-- Logo and Brand -->
     <a class="navbar-brand d-flex align-items-center gap-2 fw-bold text-dark" href="#">
   
-    <img src="../../../../public/images/scanner.ico" class="img-fluid"  alt="Logo" height="30" />
+    <img src="/images/scanner.ico" class="img-fluid"  alt="Logo" height="30" />
       Smart Document Scanner
     </a>
 
