--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -12,7 +12,7 @@
         <p class="text-muted fs-5 mt-3">
           Easily scan documents like ID cards, forms, and invoices — then extract structured data automatically using AI-powered OCR and smart templates.
         </p>
-        <button class="btn btn-dark rounded-pill mt-3 px-4 py-2">
+        <button class="btn btn-dark rounded-pill mt-3 px-4 py-2" (click)="scrollToTemplates()">
           Start Scanning
         </button>
       </div>
@@ -30,7 +30,7 @@
 
 
 <!-- Search Bar -->
-<div class="search-bar-section py-3 bg-white shadow-sm position-relative z-1">
+<div id="template-cards" class="search-bar-section py-3 bg-white shadow-sm position-relative z-1">
   <div class="container d-flex flex-column flex-md-row align-items-center justify-content-center gap-3">
     <input
       type="text"
@@ -48,7 +48,7 @@
 </div>
 
 <!-- Template Cards Section -->
-<div class="container mt-5">
+<div  class="container mt-5">
   <h3 class="fw-bold mb-4 text-center text-md-start">Popular Templates</h3>
   <div class="row">
   <app-template-card
