--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -12,8 +12,11 @@
         <p class="text-muted fs-5 mt-3">
           Easily scan documents like ID cards, forms, and invoices — then extract structured data automatically using AI-powered OCR and smart templates.
         </p>
-        <button class="btn btn-dark rounded-pill mt-3 px-4 py-2" (click)="scrollToTemplates()">
+        <button class="btn btn-dark rounded-pill mt-3 px-4 py-2 " (click)="scrollToTemplates()">
           Start Scanning
+        </button>
+         <button class="btn btn-create rounded-pill mt-3 px-4 py-2" (click)="navigateToTemplateBuilder()">
+          Create Template
         </button>
       </div>
 
