--- a/src/app/pages/document/document.html
+++ b/src/app/pages/document/document.html
@@ -3,8 +3,18 @@
   <header class="document-header">
     <div class="container-fluid">
       <div class="row align-items-center">
-        <div class="col-md-8">
+        <div class="col-md-4">
           <h1 class="mb-0">Document Processor</h1>
+        </div>
+        <div class="col-md-4 ">
+        <button class="btn btn-save" (click)="export()" [disabled]="">
+                <span *ngIf="">
+                    <i class="bi bi-save me-2"></i>Save Template
+                </span>
+                <span *ngIf="">
+                    <i class="bi bi-hourglass me-2"></i>Saving...
+                </span>
+                </button>
         </div>
         <div class="col-md-4 text-end">
           <div class="status-indicator">
