feat : added custom toast

--- a/src/app/pages/settings/edit-profile/edit-profile.html
+++ b/src/app/pages/settings/edit-profile/edit-profile.html
@@ -44,11 +44,22 @@
           </select>
         </div>
       </div>
+      
+       <div class="row mb-3 align-items-center">  <!-- Added align-items-center -->
+  <div class="col">
+    <div class="mb-3">
+      <label>Password</label>
+      <input type="password" class="form-control" [(ngModel)]="profile.password" name="password" />
+    </div>
+  </div>
+  <div class="col-auto d-flex align-items-end">  <!-- Changed to col-auto and added d-flex align-items-end -->
+    <button class="btn btn-danger" type="submit" (click)="onPasswordChange()">
+      Change Password
+    </button>
+  </div>
+</div>
 
-      <div class="mb-3">
-        <label>Password</label>
-        <input type="password" class="form-control" [(ngModel)]="profile.password" name="password" />
-      </div>
+     
 
       <div class="d-flex gap-2">
         <button class="btn btn-outline-danger" type="button" (click)="onCancel()">Cancel</button>
@@ -57,7 +68,34 @@
     </form>
   </div>
 
-  <div class="col-md-4 text-center">
-    <img src="/images/profiles.png" class="rounded-circle mb-3" width="120" />
+<div class="col-md-4 text-center">
+  <div class="position-relative profile-picture-container">
+    <div class="profile-image-wrapper" (click)="toggleUrlInput()">
+      <img [src]="userData?.profilePicturePath || 'images/profiles.png'" 
+           class="rounded-circle mb-3 profile-image" 
+           width="120" 
+           height="120"
+           (error)="handleImageError($event)">
+      <div class="upload-icon-overlay">
+        <i class="bi bi-camera-fill"></i>
+      </div>
+    </div>
+    
+    <div class="input-group mt-2" *ngIf="showUrlInput">
+      <input type="url" 
+             class="form-control" 
+             [(ngModel)]="profilePictureUrl"
+             placeholder="Enter image URL"
+             name="profilePictureUrl">
+      <button class="btn btn-primary" (click)="updateProfilePicture(); $event.stopPropagation()">
+        Update
+      </button>
+    </div>
   </div>
+  <small class="text-muted" *ngIf="showUrlInput">
+    Enter a direct image URL (must be publicly accessible)
+  </small>
+</div>
+
+
 </div>
