--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,7 @@
+<div class="toast-container-top">
+  <ng-container #toastContainer></ng-container>
+</div>
+
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
