--- a/src/app/pages/header/header.css
+++ b/src/app/pages/header/header.css
@@ -15,3 +15,8 @@
   background-color: #2d1d13; /* dark brown as seen in image */
   border: none;
 }
+
+.profile-name-role {
+  line-height: 1.1;
+  font-size: 0.55rem;
+}
