--- a/src/app/pages/template-builder/template-builder.css
+++ b/src/app/pages/template-builder/template-builder.css
@@ -293,3 +293,29 @@
   margin-bottom: 0.5rem;
   font-weight: 500;
 }
+.profile-image-wrapper {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+}
+
+.upload-icon-overlay {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background: rgba(0,0,0,0.5);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.profile-image {
+  border-radius: 8px;
+  border: 1px dashed ;
+  border-spacing: 5px;
+  object-fit: cover;
+}
