--- a/src/app/pages/template-card/template-card.html
+++ b/src/app/pages/template-card/template-card.html
@@ -1,11 +1,10 @@
 <div class="card shadow-sm rounded-4 h-100 hover-shadow">
-  <img [src]="template.image_url || 'https://via.placeholder.com/300x200'" 
-       class="card-img-top rounded-top-4 object-fit-cover" 
-       style="height: 150px;" 
-       alt="Template Image">
-  
+      <img [src]="getImageUrl()" 
+     class="card-img-top rounded-top-4 object-fit-cover" 
+     style="height: 150px;" 
+     alt="Template Image"> 
   <div class="card-body d-flex flex-column">
-    <h5 class="card-title">{{ template.template_name }}</h5>
+    <h5 class="card-title">{{ template.template_name}}</h5>
     
     <!-- Field Count -->
     <p class="text-muted small mb-2">{{ template.field_count }} Fields</p>
