feat :added template delete methode

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="toast-container-top">
   <ng-container #toastContainer></ng-container>
 </div>
-
+<app-modal-component></app-modal-component>
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
