--- a/src/app/pages/template-card/template-card.css
+++ b/src/app/pages/template-card/template-card.css
@@ -9,3 +9,42 @@
   transform: translateY(-2px);
   box-shadow: 0 10px 20px rgba(0,0,0,0.1) !important;
 }
+.floating-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 1000;
+    }
+
+    #fab-button {
+       background-color: rgb(62, 25, 25);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+    }
+
+   .dropdown-content {
+    display: none;
+    right: 0ch;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+    .floating-button:hover .dropdown-content {
+        display: block;
+    }
+
+    .dropdown-item {
+        padding: 10px 15px;
+        text-decoration: none;
+        display: block;
+        color: black;
+    }
+
+    .dropdown-item:hover {
+        background-color: #f0f0f0;
+    }
+    .dropdown-content.show {
+    display: block;
+}
