--- a/src/app/pages/template-builder/template-builder.html
+++ b/src/app/pages/template-builder/template-builder.html
@@ -8,14 +8,16 @@
             <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
                 <h1 class="mb-0 ">Template Builder</h1>
-                <button class="btn btn-save" (click)="saveTemplate()" [disabled]="isSaving">
+                <button class="btn btn-save" 
+                      (click)="isEditMode ? updateTemplate() : saveTemplate()" 
+                      [disabled]="isSaving">
                 <span *ngIf="!isSaving">
-                    <i class="bi bi-save me-2"></i>Save Template
+                  <i class="bi bi-save me-2"></i>{{ isEditMode ? 'Update' : 'Save' }} Template
                 </span>
                 <span *ngIf="isSaving">
-                    <i class="bi bi-hourglass me-2"></i>Saving...
+                  <i class="bi bi-hourglass me-2"></i>{{ isEditMode ? 'Updating...' : 'Saving...' }}
                 </span>
-                </button>
+              </button>
             </div>
             </div>
         </div>
